<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="mainActivity"
            type="com.serhat.imageresizer.MainActivity" />

        <variable name="bitmap"
            type="android.graphics.Bitmap" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            tools:context=".MainActivity" >

            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"
                android:text="@string/app_name" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/purple_700" />

            <ImageView
                android:id="@+id/imgSelectedImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/image_border"
                android:padding="2dp"
                android:onClick="@{() -> mainActivity.selectImage()}"
                app:srcCompat="@drawable/ic_image"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/lblResizeByPercentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:textSize="24sp"
                android:layout_marginTop="32dp"
                android:textAlignment="center"
                android:text="@string/lbl_resize_by_percentage" />

            <SeekBar
                android:id="@+id/seekBarPercentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:min="1"
                android:max="100"
                android:progress="50"
                android:paddingTop="8dp"
                android:onProgressChanged='@{() -> lblPercentage.setText(@string/lbl_percentage_part_1 + seekBarPercentage.getProgress() + @string/lbl_percentage_part_2)}'
                android:progressTint="@color/purple_500"
                android:thumbTint="@color/purple_700" />

            <TextView
                android:id="@+id/lblPercentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/lbl_percentage" />

            <TextView
                android:id="@+id/lblResizeByDimensions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:text="@string/lbl_resize_by_custom_dimensions" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:paddingTop="8dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:suffixText="@string/txt_px"
                    android:layout_weight="47.5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtWidth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_width"
                        android:inputType="number"
                        android:maxLength="4"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:suffixText="@string/txt_px"
                    android:layout_weight="47.5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtHeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_height"
                        android:inputType="number"
                        android:maxLength="4"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/radioResizeByPercentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_500"
                    android:checked="true"
                    android:text="@string/lbl_resize_by_percentage"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioResizeByDimensions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_500"
                    android:text="@string/lbl_resize_by_custom_dimensions"
                    android:textSize="20sp" />
            </RadioGroup>

            <Button
                android:id="@+id/btnResizeImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:paddingVertical="8dp"
                android:textColor="@color/purple_500"
                android:backgroundTint="@color/white"
                android:text="@string/btn_resize_image"
                android:onClick="@{() -> mainActivity.resizeImage(btnResizeImage, bitmap, txtWidth.getText().toString(), txtHeight.getText().toString(), Integer.parseInt(String.valueOf(seekBarPercentage.getProgress())), radioResizeByPercentage.isChecked())}"
                app:strokeColor="@color/purple_500"
                app:strokeWidth="2dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>